--- a/index.html
+++ b/index.html
@@ -6,8 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LCisternas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/img/Icon_Business_Set_00007_A_icon-icons.com_59843.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 </head>
 <body>
-    
+
+    <div class="nav-align">
+        <nav id="navbar">
+            <a href="#welcome-section">About</a>
+            <a href="#proyects">My work</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </div>
+    <div class="main">
+        <section id="welcome-section">
+            <h1>Hi! I am Lucas Cisternas</h1>
+            <p>Full Stack Developer</p>
+        </section>
+        
+        <div class="title">
+            <h2>Some of my projects</h2>
+        </div>
+        <section id="proyects">
+            <div class="proyect-tile">
+                <a href="https://lcisternas.github.io/documentation-page/" target="_blank"><img src="https://i.ibb.co/KxKyN2p/docu500.png" alt="JSdocu"><p>JS Documentation</p></a>
+            </div>
+            <div class="proyect-tile">
+                <a href="https://lcisternas.github.io/product-page/" target="_blank"><img src="https://i.ibb.co/vHNZqmm/product500.png" alt="product-page"><p>Product Landing Page</p></a>
+            </div>
+            <div class="proyect-tile">
+                <a href="https://lcisternas.github.io/survey-form/" target="_blank"><img src="https://i.ibb.co/Hxq7NhZ/survey500.png" alt="Survey"><p>Survey Form</p></a>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Let's work together!</h2>
+            <p>You can contact me here</p>
+            <div class="icons">
+                <a id="profile-link" href="https://github.com/LCisternas" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a id="profile-link" href="https://www.linkedin.com/in/lucas-cisternas-software-engineer/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
