--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav-align">
         <nav id="navbar">
             <a href="#welcome-section">About</a>
-            <a href="#proyects">My work</a>
+            <a href="#title">My work</a>
             <a href="#contact">Contact</a>
         </nav>
     </div>
@@ -26,7 +26,7 @@
             <p>Full Stack Developer</p>
         </section>
         
-        <div class="title">
+        <div id="title" class="title">
             <h2>Some of my projects</h2>
         </div>
         <section id="proyects">
