--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="main">
         <section id="welcome-section">
             <h1>Hi! I am Lucas Cisternas</h1>
-            <p>Full Stack Developer</p>
+            <p>Web Developer</p>
         </section>
         
         <div id="title" class="title">
